set up jekyll properly

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="{{ page.style }}">
         <meta property="og:url" content="https://sentyfunball.github.io/sentyfunball">
-        <meta property="og:title" content="{{ page.titleFull }}">
+        <meta property="og:title" content="{{ page.fullTitle }}">
         <meta property="og:image" content="./assets/SFB-4.png">
         <meta property="og:description" content="{{ page.desc }}">
         <link rel="icon" href="assets/SFB-4.png">
