--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,9 +6,9 @@
         <link rel="stylesheet" type="text/css" href="{{ page.style }}">
         <meta property="og:url" content="https://sentyfunball.github.io/sentyfunball">
         <meta property="og:title" content="{{ page.fullTitle }}">
-        <meta property="og:image" content="./assets/SFB-4.png">
+        <meta property="og:image" content="{{ page.pathFavicon }}">
         <meta property="og:description" content="{{ page.desc }}">
-        <link rel="icon" href="assets/SFB-4.png">
+        <link rel="icon" href="{{ page.pathFavicon }}">
         <title>{{ page.title }}</title>
     </head>
 <body>
