--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,5 @@
 <header>
     <div class="header">
-        <a href="{{ path.style }}../../index.html"><img src="{{page.pathFavicon}}"></a>
-        
+        <a href="{{ page.pathIndex }}"><img src="{{page.pathFavicon}}"></a>
     </div>
 </header>
