--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
     <div class="footer">
-        <p>&copy; 2025 SentyTek Corp.</p>
+        <p>&copy; 2025 SentyFunball/SentyTek</p>
     </div>
 </footer>
