--- a/styles/style.css
+++ b/styles/style.css
@@ -67,6 +67,15 @@ a:hover {
     text-decoration: none;
 }
 
+img {
+    border-radius: 10px;
+    margin-bottom: 15px;
+}
+
+.result img {
+    cursor: pointer;
+}
+
 .page {
     width: 50vw;
     min-width: 300px;
@@ -130,8 +139,9 @@ a:hover {
 
 ul {
     user-select: text;
-    overflow: visible;
-    padding-left: 20px;
+    overflow: hidden;
+    text-align: left;
+    padding-left: 6vw;
 }
 li {
     list-style-position: inside;
@@ -139,7 +149,8 @@ li {
 }
 li p {
     margin-top: -20px;
-    margin-left: 20px;
+    position: relative;
+    left: -3vw;
 }
 
 .buttonBox {
@@ -181,7 +192,8 @@ button:active h3 {
     overflow-y: auto;
     overflow-x: hidden;
     background-color: var(--end);
-    position: absolute;
+    position: relative;
+    top:-10vh;
     width: 30vw;
     min-width: 300px;
     z-index: 1000;
@@ -201,24 +213,59 @@ button:active h3 {
     display: none;
 }
 
+.holder {
+    position: relative;
+    display: inline-block;
+    width: 70vw;
+    min-width: 400px;
+}
+
+.submitbutton {
+    background-color: var(--end);
+    color: var(--text);
+    width: 10vw;
+    min-width: 100px;
+    max-width: 200px;
+    height: 5vh;
+    border-radius: 10px;
+    border: 2px solid white;
+    cursor: pointer;
+    overflow: hidden;
+    position: relative;
+    text-align: center;
+    right: -35vw;
+    top: -10vh;
+}
+.submitbutton:hover {
+    background-color: darkslateblue;
+    border: 2px solid cornflowerblue;
+}
+
 .searchbox {
     background-color: var(--end);
     color: var(--text);
     width: 30vw;
     min-width: 350px;
     min-width: 100px;
-    height: 3vh;
+    height: 5vh;
     border-radius: 10px;
     border: 2px solid white;
     cursor: text;
     margin-right: 3em;
     margin-bottom: 5vh;
+    font-size: medium;
+    padding-left: 10px;
 }
+.searchbox:focus {
+    outline: none;
+    border: 2px solid cornflowerblue;
+}
+
 
 .result {
     opacity: 0;
     transform: translateY(50px);
-    transition: opacity 0.8s ease, transform 0.8s ease;
+    transition: opacity 0.0s ease, transform 0.0s ease;
 }
 .result.border {
     background-color: rgba(200, 200, 200, 0.1);
@@ -264,6 +311,11 @@ button:active h3 {
     margin-left: 5vw;
     min-width: 250px;
 }
+.result.border h1 {
+    width: 40vw;
+    margin-left: 5vw;
+    min-width: 250px;
+}
   
 .results {
     display: none;
@@ -286,4 +338,41 @@ button:active h3 {
 }
 .errbox p {
     margin-left: 10px;
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 2000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.7);
+    justify-content: center;
+    align-items: center;
+}
+
+.model-content {
+    margin: auto;
+    display: block;
+    max-width: 80%;
+    max-height: 90vh;
+}
+
+.model-close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+    cursor: pointer;
+}
+
+.model-close:hover, .model-close:focus {
+    color: #bbb;
+    cursor: pointer;
 }
